Fix toolbox management real-time updates and improve admin interface
- Implement real-time updates for admin toolbox management page
- Remove 'Created At' column from toolbox table for cleaner UI
- Update statistics to show Total Forms, Draft, and Completed counts
- Add comprehensive debugging for login redirect issues
- Fix Socket.IO event handling for toolbox updates
- Align admin toolbox statistics with user experience
- Add debugging logs for authentication flow
- Improve error handling and user feedback

--- a/Frontend/admin-reports.html
+++ b/Frontend/admin-reports.html
@@ -175,12 +175,13 @@
         </div>
     </div>
 
+    <script src="./config.js"></script>
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script>
         // Connect to realtime to update admin reports table instantly
         document.addEventListener('DOMContentLoaded', () => {
             try {
-                const socket = io('http://localhost:5000', { transports: ['websocket', 'polling'] });
+                const socket = io(window.appConfig.getSocketUrl(), { transports: ['websocket', 'polling'] });
                 const badge = document.getElementById('liveBadgeAdmin');
                 const setLive = (on) => { if (!badge) return; badge.style.background = on ? '#27ae60' : '#e74c3c'; badge.querySelector('.status').textContent = on ? 'LIVE' : 'OFFLINE'; };
                 socket.on('connect', () => setLive(true));
