--- a/Frontend/admin-users.html
+++ b/Frontend/admin-users.html
@@ -282,6 +282,7 @@
     </div>
 
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <script src="./config.js"></script>
     <script>
         // Connect to realtime to update admin users table and tasks instantly
         document.addEventListener('DOMContentLoaded', () => {
