--- a/Frontend/inventory.html
+++ b/Frontend/inventory.html
@@ -80,6 +80,81 @@
       min-width: 100px;
       text-align: center;
     }
+
+    /* Sidebar Greeting Styles */
+    .sidebar-greeting {
+      text-align: center;
+      padding: 20px 15px;
+      border-radius: 12px;
+      background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
+      border: 2px solid #e2e8f0;
+      margin-bottom: 20px;
+      transition: all 0.3s ease;
+      box-shadow: 0 2px 8px rgba(52, 152, 219, 0.1);
+      cursor: pointer;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .sidebar-greeting::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(52, 152, 219, 0.1), transparent);
+      transition: left 0.5s ease;
+    }
+
+    .sidebar-greeting:hover::before {
+      left: 100%;
+    }
+
+    .sidebar-greeting:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 25px rgba(52, 152, 219, 0.2);
+      border-color: #3498db;
+      background: linear-gradient(135deg, #f0f8ff 0%, #e6f3ff 100%);
+    }
+
+    .sidebar-greeting:active {
+      transform: translateY(0);
+      transition: transform 0.1s ease;
+    }
+
+    /* Animation for page load */
+    @keyframes slideInFromTop {
+      0% {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .sidebar-greeting {
+      animation: slideInFromTop 0.6s ease-out;
+    }
+
+    /* Greeting text styling */
+    .sidebar-greeting #greeting {
+      margin: 0;
+      color: #3498db;
+      font-size: 18px;
+      font-weight: 700;
+      text-shadow: 0 1px 2px rgba(52, 152, 219, 0.1);
+    }
+
+    .sidebar-greeting #roleSubtitle {
+      color: #6b7280;
+      font-size: 14px;
+      margin-top: 8px;
+      font-weight: 500;
+    }
   </style>
 
 </head>
@@ -88,6 +163,12 @@
   <div class="container">
     <aside class="sidebar">
       <img src="./images/logo_gpha.png" alt="User Avatar" class="avatar">
+
+      <!-- User Greeting in Sidebar -->
+      <div class="sidebar-greeting">
+        <p id="greeting"></p>
+        <div id="roleSubtitle"></div>
+      </div>
 
       <nav>
         <a href="./dashboard.html">📊 Dashboard</a>
@@ -194,7 +275,9 @@
           <button id="addInventoryBtn" onclick="addInventory()">Add</button>
           <button onclick="hideAddModal()">Cancel</button>
 
-          <button onclick="exportToExcel()" style="background-color: #0055aa; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">Export to Excel</button>
+          <button onclick="exportToExcel()"
+            style="background-color: #0055aa; color: white; border: none; padding: 8px 16px; border-radius: 4px; cursor: pointer;">Export
+            to Excel</button>
         </div>
       </div>
 
@@ -207,7 +290,8 @@
 
 
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-  <script src="./dark-mode.js"></script>
+
+  <script src="./config.js"></script>
   <script src="./script.js"></script>
   <script src="./inventory.js"></script>
   <script src="./user-greeting.js"></script>
@@ -226,6 +310,9 @@
           token: localStorage.getItem('token')
         }
       });
+
+      // Make socket globally accessible for inventory.js
+      window.socket = socket;
 
       socket.on('connect', () => {
         console.log('🔌 Connected to server for real-time inventory updates');
@@ -257,12 +344,13 @@
       });
     }
 
-    // Manual refresh function
-    function manualRefresh() {
-      console.log('🔄 Manual refresh requested...');
-      loadInventory();
-      showNotification('🔄 Inventory refreshed manually', 'info');
+    // Show notification function
+    function showNotification(message, type = 'info') {
+      console.log(`📢 ${type.toUpperCase()}: ${message}`);
+      // For now, just log to console. You can enhance this with a proper notification system later.
     }
+
+
 
     // Inventory pagination functions
     function updateInventoryPaginationInfo(totalInventory) {
@@ -318,7 +406,6 @@
       updateInventoryPaginationInfo(totalInventory);
     }
 
-vens
     window.updateInventoryPaginationInfo = updateInventoryPaginationInfo;
     window.changeInventoryPage = changeInventoryPage;
     window.renderInventoryWithPagination = renderInventoryWithPagination;
