--- a/Frontend/admin-inventory.html
+++ b/Frontend/admin-inventory.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>Admin Inventory Management</title>
     <link rel="icon" type="image/png" href="./images/logo_gpha.png">
     <link rel="stylesheet" href="./adminDashboard.css">
@@ -176,6 +176,14 @@
     <!-- Then load main script -->
     <script src="./admin-inventory.js"></script>
     <div class="admin-container">
+        <!-- Mobile Menu Toggle -->
+        <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
+            <i class="fas fa-bars"></i>
+        </button>
+
+        <!-- Mobile Overlay -->
+        <div class="mobile-overlay" onclick="closeMobileMenu()"></div>
+
         <!-- Navbar Navigation -->
         <nav class="navbar">
             <div class="nav-container">
@@ -184,7 +192,7 @@
                     <h1>Admin Dashboard</h1>
                 </a>
 
-                <div class="nav-menu">
+                <div class="nav-menu" id="navMenu">
                     <a href="./admin-dashboard.html" class="nav-link">
                         <i class="fas fa-tachometer-alt"></i>
                         Dashboard
@@ -432,6 +440,54 @@
             </div>
         </div>
     </div>
+
+    <script>
+        // Mobile menu functionality
+        function toggleMobileMenu() {
+            const navMenu = document.getElementById('navMenu');
+            const overlay = document.querySelector('.mobile-overlay');
+            const toggle = document.querySelector('.mobile-menu-toggle');
+
+            navMenu.classList.toggle('mobile-open');
+            overlay.classList.toggle('active');
+
+            // Change icon
+            const icon = toggle.querySelector('i');
+            if (navMenu.classList.contains('mobile-open')) {
+                icon.className = 'fas fa-times';
+            } else {
+                icon.className = 'fas fa-bars';
+            }
+        }
+
+        function closeMobileMenu() {
+            const navMenu = document.getElementById('navMenu');
+            const overlay = document.querySelector('.mobile-overlay');
+            const toggle = document.querySelector('.mobile-menu-toggle');
+
+            navMenu.classList.remove('mobile-open');
+            overlay.classList.remove('active');
+
+            // Change icon back
+            const icon = toggle.querySelector('i');
+            icon.className = 'fas fa-bars';
+        }
+
+        // Close mobile menu when clicking on nav links
+        document.addEventListener('DOMContentLoaded', function () {
+            const navLinks = document.querySelectorAll('.nav-link');
+            navLinks.forEach(link => {
+                link.addEventListener('click', closeMobileMenu);
+            });
+        });
+
+        // Close mobile menu on window resize if screen becomes large
+        window.addEventListener('resize', function () {
+            if (window.innerWidth > 768) {
+                closeMobileMenu();
+            }
+        });
+    </script>
 
 </body>
 
