--- a/Frontend/generate_report.html
+++ b/Frontend/generate_report.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>Generate Report</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -307,7 +307,15 @@
 
 <body>
     <div class="container">
-        <aside class="sidebar">
+        <!-- Mobile Menu Toggle -->
+        <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
+            <i class="fas fa-bars"></i>
+        </button>
+
+        <!-- Mobile Overlay -->
+        <div class="mobile-overlay" onclick="closeMobileMenu()"></div>
+
+        <aside class="sidebar" id="sidebar">
             <img src="./images/logo_gpha.png" alt="User Avatar" class="avatar">
 
             <!-- User Greeting in Sidebar -->
@@ -553,6 +561,54 @@
                 margin-bottom: 10px;
             }
         </style>
+
+        <script>
+            // Mobile menu functionality
+            function toggleMobileMenu() {
+                const sidebar = document.getElementById('sidebar');
+                const overlay = document.querySelector('.mobile-overlay');
+                const toggle = document.querySelector('.mobile-menu-toggle');
+
+                sidebar.classList.toggle('mobile-open');
+                overlay.classList.toggle('active');
+
+                // Change icon
+                const icon = toggle.querySelector('i');
+                if (sidebar.classList.contains('mobile-open')) {
+                    icon.className = 'fas fa-times';
+                } else {
+                    icon.className = 'fas fa-bars';
+                }
+            }
+
+            function closeMobileMenu() {
+                const sidebar = document.getElementById('sidebar');
+                const overlay = document.querySelector('.mobile-overlay');
+                const toggle = document.querySelector('.mobile-menu-toggle');
+
+                sidebar.classList.remove('mobile-open');
+                overlay.classList.remove('active');
+
+                // Change icon back
+                const icon = toggle.querySelector('i');
+                icon.className = 'fas fa-bars';
+            }
+
+            // Close mobile menu when clicking on nav links
+            document.addEventListener('DOMContentLoaded', function () {
+                const navLinks = document.querySelectorAll('nav a');
+                navLinks.forEach(link => {
+                    link.addEventListener('click', closeMobileMenu);
+                });
+            });
+
+            // Close mobile menu on window resize if screen becomes large
+            window.addEventListener('resize', function () {
+                if (window.innerWidth > 768) {
+                    closeMobileMenu();
+                }
+            });
+        </script>
 </body>
 
 </html>
