--- a/Frontend/reset_password.html
+++ b/Frontend/reset_password.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>Electrical Management Systems</title>
     <link rel="icon" type="image/png" href="./images/logo_gpha.png">
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
 
     <div class="container">
@@ -16,7 +18,7 @@
             <form id="resetForm">
                 <div class="input-group">
                     <input type="text" id="staffID" placeholder="Staff ID" required />
-                  </div>
+                </div>
                 <div class="input-group">
                     <input type="password" id="newPassword" placeholder="New Password" required>
                 </div>
@@ -25,10 +27,11 @@
                 </div>
                 <button type="submit" class="login-btn">Reset Password</button>
                 <p><a href="./index.html">Back to Login</a></p>
-               
+
             </form>
         </div>
     </div>
     <script src="./script.js"></script>
 </body>
+
 </html>
