--- a/Frontend/settings.html
+++ b/Frontend/settings.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
   <title>Settings</title>
   <link rel="icon" type="image/png" href="./images/logo_gpha.png">
   <link rel="stylesheet" href="./dashboard.css">
@@ -57,6 +57,7 @@
         opacity: 0;
         transform: translateY(-20px);
       }
+
       100% {
         opacity: 1;
         transform: translateY(0);
@@ -87,9 +88,17 @@
 
 <body>
   <div class="container">
-    <aside class="sidebar">
+    <!-- Mobile Menu Toggle -->
+    <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
+      <i class="fas fa-bars"></i>
+    </button>
+
+    <!-- Mobile Overlay -->
+    <div class="mobile-overlay" onclick="closeMobileMenu()"></div>
+
+    <aside class="sidebar" id="sidebar">
       <img src="./images/logo_gpha.png" alt="User Avatar" class="avatar">
-      
+
       <!-- User Greeting in Sidebar -->
       <div class="sidebar-greeting">
         <p id="greeting"></p>
@@ -141,6 +150,53 @@
   <script src="./config.js"></script>
   <script src="./user-greeting.js"></script>
 
+  <script>
+    // Mobile menu functionality
+    function toggleMobileMenu() {
+      const sidebar = document.getElementById('sidebar');
+      const overlay = document.querySelector('.mobile-overlay');
+      const toggle = document.querySelector('.mobile-menu-toggle');
+
+      sidebar.classList.toggle('mobile-open');
+      overlay.classList.toggle('active');
+
+      // Change icon
+      const icon = toggle.querySelector('i');
+      if (sidebar.classList.contains('mobile-open')) {
+        icon.className = 'fas fa-times';
+      } else {
+        icon.className = 'fas fa-bars';
+      }
+    }
+
+    function closeMobileMenu() {
+      const sidebar = document.getElementById('sidebar');
+      const overlay = document.querySelector('.mobile-overlay');
+      const toggle = document.querySelector('.mobile-menu-toggle');
+
+      sidebar.classList.remove('mobile-open');
+      overlay.classList.remove('active');
+
+      // Change icon back
+      const icon = toggle.querySelector('i');
+      icon.className = 'fas fa-bars';
+    }
+
+    // Close mobile menu when clicking on nav links
+    document.addEventListener('DOMContentLoaded', function () {
+      const navLinks = document.querySelectorAll('nav a');
+      navLinks.forEach(link => {
+        link.addEventListener('click', closeMobileMenu);
+      });
+    });
+
+    // Close mobile menu on window resize if screen becomes large
+    window.addEventListener('resize', function () {
+      if (window.innerWidth > 768) {
+        closeMobileMenu();
+      }
+    });
+  </script>
 
   <script src="./script.js"></script>
 </body>
