--- a/Frontend/toolbox-dashboard.html
+++ b/Frontend/toolbox-dashboard.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>Toolbox Dashboard</title>
     <style>
         body {
@@ -10,6 +12,7 @@
             display: flex;
             height: 100vh;
         }
+
         header {
             width: 100%;
             height: 60px;
@@ -23,6 +26,7 @@
             left: 0;
             z-index: 1;
         }
+
         .sidebar {
             width: 220px;
             background: #34495e;
@@ -33,17 +37,21 @@
             left: 0;
             height: 100%;
         }
+
         .sidebar ul {
             list-style: none;
             padding: 0;
         }
+
         .sidebar li {
             padding: 15px 20px;
             cursor: pointer;
         }
+
         .sidebar li:hover {
             background: #3d566e;
         }
+
         .main-content {
             margin-left: 220px;
             margin-top: 60px;
@@ -54,6 +62,7 @@
         }
     </style>
 </head>
+
 <body>
     <script>
         // Simulate authentication check (replace with real logic)
@@ -87,4 +96,5 @@
         }
     </script>
 </body>
+
 </html>
