--- a/Frontend/generate_report.html
+++ b/Frontend/generate_report.html
@@ -507,6 +507,43 @@
         <script src="./generate_report.js"></script>
         <script src="./user-greeting.js"></script>
 
+        <script>
+            // Authentication check
+            document.addEventListener('DOMContentLoaded', function () {
+                const token = localStorage.getItem('token');
+                const user = localStorage.getItem('user');
+
+                if (!token || !user) {
+                    console.log('❌ No authentication token or user data found, redirecting to login');
+                    localStorage.clear();
+                    window.location.href = 'index.html';
+                    return;
+                }
+
+                // Validate token format
+                try {
+                    const tokenParts = token.split('.');
+                    if (tokenParts.length !== 3) {
+                        throw new Error('Invalid token format');
+                    }
+
+                    const payload = JSON.parse(atob(tokenParts[1]));
+
+                    // Check if token is expired
+                    if (payload.exp && payload.exp < Date.now() / 1000) {
+                        throw new Error('Token expired');
+                    }
+
+                    console.log('✅ Authentication successful for generate report page');
+                } catch (tokenError) {
+                    console.error('❌ Token validation failed:', tokenError);
+                    localStorage.clear();
+                    window.location.href = 'index.html';
+                    return;
+                }
+            });
+        </script>
+
         <style>
             /* Tool selection styling */
             #selectedToolsContainer {
