--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,14 +14,14 @@
         <div class="login-box">
             <img src="./images/logo_gpha.png" alt="User Avatar" class="avatar">
             <h2>Welcome Back!</h2>
-            <form id="LoginForm">
+            <form id="LoginForm" autocomplete="off">
                 <div class="input-group">
-                    <input type="text" id="staffID" name="staffID" placeholder="Enter Staff ID" autocomplete="on"
+                    <input type="text" id="staffID" name="staffID" placeholder="Enter Staff ID" autocomplete="off"
                         required>
 
                 </div>
                 <div class="input-group">
-                    <input type="password" id="password" placeholder="Password" required>
+                    <input type="password" id="password" placeholder="Password" autocomplete="off" required>
                 </div>
                 <button type="submit" class="login-btn">Login</button>
                 <p class="forgot-password">
