Fix profile page API URLs for production deployment
- Replace hardcoded localhost URLs with configured API URLs
- Use appConfig.getApiUrl() for profile loading and updating
- Ensure profile data persists after logout and login
- Fix profile functionality to work with deployed backend

--- a/Frontend/profile.html
+++ b/Frontend/profile.html
@@ -248,7 +248,8 @@
       }
 
       try {
-        const response = await fetch('http://localhost:5000/api/auth/profile', {
+        const apiUrl = window.appConfig ? window.appConfig.getApiUrl('/auth/profile') : 'https://electrical-3-2.onrender.com/api/auth/profile';
+        const response = await fetch(apiUrl, {
           headers: {
             'Authorization': `Bearer ${localStorage.getItem('token')}`
           }
@@ -317,7 +318,8 @@
       };
 
       try {
-        const response = await fetch('http://localhost:5000/api/auth/profile', {
+        const apiUrl = window.appConfig ? window.appConfig.getApiUrl('/auth/profile') : 'https://electrical-3-2.onrender.com/api/auth/profile';
+        const response = await fetch(apiUrl, {
           method: 'PUT',
           headers: {
             'Content-Type': 'application/json',
