Normalize report status counting in admin dashboard for charts

--- a/Frontend/admin-dashboard.html
+++ b/Frontend/admin-dashboard.html
@@ -185,7 +185,7 @@
                         </div>
                     </div>
                     <div class="chart-card">
-                        <h3>Reports Performance (Revenue Chart)</h3>
+                        <h3>Reports Performance</h3>
                         <canvas id="adminRevenueChart"></canvas>
                         <div class="performance-indicator">
                             <span>Performance:</span>
